--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "gulp-angular-filesort": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-inject": "^4.2.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-ng-annotate": "^2.0.0",
-    "gulp-plugins": "^0.0.18",
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^3.0.0"
   },
