--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0"
   },
   "devDependencies": {
